spacing fix

--- a/app/globals.css
+++ b/app/globals.css
@@ -57,7 +57,7 @@
   }
 
   .embla__slide_sm {
-    flex: 0 0 92%;
+    flex: 0 0 88%;
   }
 
   .embla__slide_md {
